fix architecture and update docs